--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/"
+    "url" : "git+hhttps://github.com/inisialal/percobaan-botwaa"
   },
   "keywords": [
     "k"
@@ -42,7 +42,7 @@
   "author": "Abdul Muttaqin",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/issues"
+    "url" : "https://github.com/inisialal/percobaan-botwaa/issues"   
   },
-  "homepage": "https://github.com/#readme"
+  "beranda" : "https://github.com/inisialal/percobaan-botwaa#readme
 }
